# epicallan.github.io

./: .gitignore  .travis.yml  404.html  CNAME  README.md  atom.xml  epicallan-site.cabal  index.html  posts.html  rss.xml  site.hs  sitemap.xml
css/: default.css  main.css  post.css
js/: stars.js
posts/: 2019-09-24-unifying-servant-server-error-responses.md  2019-11-06-http-requests-with-hreq.md  2019-11-12-http-requests-with-hreq.md  2019-12-04-a-place-for-another-sql-EDSL.md  http-requests-with-hreq.html  unifying-servant-server-error-responses.html
scripts/: deploy.sh  dev.sh
sql-notes/: anti-join-pit-falls.md  case-expressions.md  deterministic-result-set.md  index-vs-unique-constraint.md  modularizing-with-view-and-functions.md  narrowing-table-grants.md  null-comparison-pitfall.md  random.md  readme.md  sort-by-enum-pit-fall.md  using-values-in-select.md
sql-notes/aggregation/: ARRAY-vs-array_agg.md  window-function-use-cases.md
sql-notes/functions/: parallel-executable-functions.md
sql-notes/strong-types/: non-empty-array.md  non-null-domains.md
sql-notes/subqueries/: join-vs-subquery.md
sql-notes/temprol-logic/: notes.md
src/Epicallan/: Feed.hs  Social.hs
tags/: HTTP-Client.html  Haskell.html  Network.html  Servant.html  library.html
templates/: 404.html  footer.html  main.html  nav.html  post.html  posts-default.html  posts.html
