cabal-version:         2.4
name:                  epicallan-site
version:               0.1.0.0
synopsis:              Epicallan website
description:           Epicallan website
homepage:              https://github.com/epicallan/epicallan.github.io
bug-reports:           https://github.com/epicallan/epicallan.github.io/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Epicallan
maintainer:            epicallan.al@gmail.com
copyright:             2018-2019 Kowainik, 2019 epicallan.al@gmail.com
category:              Web
build-type:            Simple
extra-doc-files:       README.md
tested-with:           GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/epicallan/epicallan.github.io.git

common common-options
  build-depends:       base-noprelude ^>= 4.12.0.0
                     , relude ^>= 0.5.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

library
  import:              common-options
  hs-source-dirs:      src

  exposed-modules:     Epicallan.Feed
                       Epicallan.Social
                       Prelude

  build-depends:       aeson
                     , bytestring
                     , directory
                     , filepath
                     , hakyll ^>= 4.12.5.1
                     , http-client
                     , http-client-tls
                     , http-types
                     , text


executable site
  import:              common-options
  main-is:             site.hs

  build-depends:       filepath
                     , hakyll
                     , hakyll-shortcut-links ^>= 0.0.0.0
                     , epicallan-site
                     , pandoc
                     , pandoc-types
                     , text

  ghc-options:        -threaded
